--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <br>
 <h2 class="head" id="about">Our Services </h2> 
 <br>
-<section class="service" style="background-color: #d6f8b4; box-shadow: 2px 1px 10px 8px #DDF9C1; ">
+<section class="service" style="background-color: #acf366; box-shadow: 2px 1px 10px 8px #DDF9C1; ">
    
     <div class="card-body rounded-bottom">
       <div class="container">
@@ -470,19 +470,19 @@
         ; padding-left: 20px; color: white; border-radius: 20px;">
         <marquee width="100%" direction="up" height="350px" scrollamount="2">
         <div class="notice-msg">
-         <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+         <p> <i style="background-color: #97e649; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
-        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ab illum consequatur enim architecto tempore, reprehenderit iure at? Dolore dignissimos, itaque quas officia ratione voluptas. Cum adipisci eligendi totam laboriosam! </p>
+        <p> <i style="background-color: #97e649; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ab illum consequatur enim architecto tempore, reprehenderit iure at? Dolore dignissimos, itaque quas officia ratione voluptas. Cum adipisci eligendi totam laboriosam! </p>
         <hr>
-        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: #97e649; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
-        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo animi soluta distinctio porro enim, eligendi ea, tempore repellendus temporibus nulla maxime quam quod laborum at ipsum nemo odit ad deleniti? </p>
+        <p> <i style="background-color: #97e649; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo animi soluta distinctio porro enim, eligendi ea, tempore repellendus temporibus nulla maxime quam quod laborum at ipsum nemo odit ad deleniti? </p>
         <hr>
-        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: #97e649; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
-        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum asperiores pariatur nihil ratione, error fugiat velit, deleniti iusto corporis dicta accusantium aut facilis hic dignissimos. Modi reprehenderit commodi repudiandae suscipit. </p>
+        <p> <i style="background-color: #97e649; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum asperiores pariatur nihil ratione, error fugiat velit, deleniti iusto corporis dicta accusantium aut facilis hic dignissimos. Modi reprehenderit commodi repudiandae suscipit. </p>
         <hr>
-        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: #97e649; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
         </div> 
       </div>
