--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <br>
 <h2 class="head" id="about">Our Services </h2> 
 <br>
-<section class="service" style="background-color: #acf366; box-shadow: 2px 1px 10px 8px #DDF9C1; ">
+<section class="service" style="background-color: #d6f8b4; box-shadow: 2px 1px 10px 8px #DDF9C1; ">
    
     <div class="card-body rounded-bottom">
       <div class="container">
