--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -255,7 +255,7 @@
     <h4 class="card-title">Junior College </h4>
     <hr>
     <!-- Text -->
-    <p class="card-text">In our junior college, we have four streams (1) Arts (Marathi medium) (2) Commerce (Marathi medium)  (3) MCVC( H.S.C Vocational) (Marathi medium) with trades Accounting and Office management , Horticulture and Crop Science  (4) Science (General subjects and  Bifocal subjects like Fisheries and Electronics).</p>
+    <p class="card-text">Our junior college which consists of XI and XII classes aims not only for excellent education of board level but also guide and motivate our students for various competitive exams in the field of science, humanities, commerce, etc.</p>
 
   </div>
 
