--- a/a1.html
+++ b/a1.html
@@ -111,9 +111,8 @@
  <div class="name">name</div>
 </div>
 <div>
-  <p class="cont"> In our junior college, we have four streams <br> (1) Arts (Marathi medium) <br> (2) Commerce (Marathi medium)  <br> (3) MCVC( H.S.C Vocational) (Marathi medium) with trades Accounting and Office management , Horticulture and Crop Science  <br> (4) Science (General subjects and  Bifocal subjects like Fisheries and Electronics).
-   <br> M.C.V.C course offers students commercial approach to earning while learning or to start their small scale business.
-    Science course helps to appear for medical, engineering and scientific research entrance examination.
+  <p class="cont">
+    <span> Deputy Headmaster of Vidarbha Buniyadi Junior College  </span> <br>  <br> In all my 27 years of teaching experience, spending my time in the classrooms with my students and then working intensely with my colleagues in order to provide A-class education to our students have always been pleasurable moments for me. I have also worked as head Critic in Nagpur Division Board for Marathi subject in 2020 and as Paper setter in 2019 which contributed in me becoming a confident and more experienced person for my team. 
     </p>
 </div>
  </div>
