--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -10,7 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
@@ -286,40 +288,30 @@
 <section style="background-color: #d6f8b4; color: black;">
   <div   class="faccard">
     <div>
-      <h2 style="color: #e93219;font-weight: bolder;" > library  </h2>
-      <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
+      <h2 style="color: #e93219;font-weight: bolder;    font-family: 'Volkhov', serif;  " > Library  </h2>
+      <p class="para" style="padding: 15px;">To create interest among students, to maintain their hobbies and develop their all-round personality we have a collection of about 10,000 books on literature, science, commerce, technology, philosophy, biographies, history, politics, etc. Our library also includes newspapers, magazines, research papers and novels. Reading room is also allotted in our huge library premises.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 300px" height="250px">
+      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
     </div>
   </div>
   <div   class="faccard">
     <div>
-      <h2 style="color: #e93219;font-weight: bolder;" > library  </h2>
-      <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
+      <h2 style="color: #e93219;font-weight: bolder;    font-family: 'Volkhov', serif;  " > Labs  </h2>
+      <p class="para" style="padding: 15px;">We at Vidarbha Buniyadi provide a range of eight practical labs to our students keeping in mind the quality of equipments and safety measures taken during special practicals. Spacious, highly updated and well furnished lab environment is provided with independent floor allotted to each lab. </p>
     </div>
     <div>
-      <img class="im" src="https://cdn.pixabay.com/photo/2018/07/12/10/38/chemistry-3533039_1280.jpg" alt="" width=" 300px" height="250px">
-    </div>
-  </div>
- 
-  <div   class="faccard">
-    <div>
-      <h2 style="color: #e93219;font-weight: bolder;" > library  </h2>
-      <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
-    </div>
-    <div>
-      <img class="im" src="./img/person_4.jpg" alt="" width=" 300px" height="250px">
+      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
     </div>
   </div>
- 
+  
   <div   class="faccard">
     <div>
-      <h2 style="color: #e93219;font-weight: bolder;"> library  </h2>
-      <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
+      <h2 style="color: #e93219;font-weight: bolder;    font-family: 'Volkhov', serif;  " > Transport </h2>
+      <p class="para" style="padding: 15px;">Our buses also ply for students in need of transport at a very reasonable cost. Safety, hygiene and comfort are services utmost taken care of. Students coming from remote areas like bahadura, panchgaon, vihirgaon, kalamna, dighori, narsala, etc are really happy with this service along with their parents satisfactory reviews. </p>
     </div>
     <div>
-      <img class="im" src="https://cdn.pixabay.com/photo/2018/08/20/10/20/canteen-3618588_1280.jpg" alt="" width=" 300px" height="250px">
+      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
     </div>
   </div>
   <br>
