--- a/a1.html
+++ b/a1.html
@@ -94,25 +94,26 @@
   <img class="im"   class="facbread"  src="./img/acad.png" alt="" width="100%" >
   <div class="midle">
     <p> Acadmics <br>
-    <span class="ob">
-    <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Acadmics</a></span>
-  </p>
+    </p>
   </div>
 </div>
 </section>
 <br>
 <br>
-<section>
-  <h1 class="head">Primary School</h1>
+<h1 class="head">Primary School</h1>
+<section >
+
   <br>
- <div class="content">
+ <div  class="content">
 <div class="imgbg">
- <img src="./img/person_2.jpg" width="300px" height="300px" alt="">
- <div class="name">name</div>
+ <img src="./img/person_2.jpg" width="0200px" height="200px" alt="">
+
 </div>
 <div>
   <p class="cont">
-    <span> Deputy Headmaster of Vidarbha Buniyadi Junior College  </span> <br>  <br> In all my 27 years of teaching experience, spending my time in the classrooms with my students and then working intensely with my colleagues in order to provide A-class education to our students have always been pleasurable moments for me. I have also worked as head Critic in Nagpur Division Board for Marathi subject in 2020 and as Paper setter in 2019 which contributed in me becoming a confident and more experienced person for my team. 
+    
+    <span> Mr. Dilip Tadas </span> <br>
+    <span> Deputy Headmaster of Vidarbha Buniyadi Junior College  </span> <br>  In all my 27 years of teaching experience, spending my time in the classrooms with my students and then working intensely with my colleagues in order to provide A-class education to our students have always been pleasurable moments for me. I have also worked as head Critic in Nagpur Division Board for Marathi subject in 2020 and as Paper setter in 2019 which contributed in me becoming a confident and more experienced person for my team. 
     </p>
 </div>
  </div>
