--- Auto-Git Commit ---

--- a/a1.html
+++ b/a1.html
@@ -10,7 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
@@ -100,7 +102,7 @@
 </section>
 <br>
 <br>
-<h1 class="head">Primary School</h1>
+<h1 class="head">High School</h1>
 <section >
 
   <br>
@@ -112,22 +114,26 @@
 <div>
   <p class="cont">
     
-    <span> Mr. Dilip Tadas </span> <br>
-    <span> Deputy Headmaster of Vidarbha Buniyadi Junior College  </span> <br>  In all my 27 years of teaching experience, spending my time in the classrooms with my students and then working intensely with my colleagues in order to provide A-class education to our students have always been pleasurable moments for me. I have also worked as head Critic in Nagpur Division Board for Marathi subject in 2020 and as Paper setter in 2019 which contributed in me becoming a confident and more experienced person for my team. 
+ 
+  <span  style=" font-weight: bold; ">Mr. Chandrashekhar Manikrao Bansod  </span> <br>
+    <span  style=" font-weight: bold; "> Supervisor of Vidarbha Buniyadi High School </span> <br> I Chandrashekhar Manikrao Bansod, with my 23 years of service have guided my students in every aspect of their lives. Progress of the students is the main motto of our teachers who regularly conduct extra-curricular activities, 10th board students’ guidance classes along with various cultural and technical programs. As a supervisor I guide my teachers’ team to maintain the discipline amongst our students and we all work towards a single goal of educating students for a bright future
     </p>
 </div>
  </div>
  <div>
   <h1 class="head">Freatures </h1>
   <p class="cont">
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
-  1. Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+    <i class="fas fa-caret-right"></i> 8 to 10 (Marathi medium) <br>
+    <i class="fas fa-caret-right"></i> 8 to 10 (Lower English medium) <br>
+
+    <i class="fas fa-minus"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit.  <br>
+    <i class="fas fa-minus"></i>	Career counselling programs held for 10 passing students. <br>
+    <i class="fas fa-minus"></i>	Extracurricular and academic subjects go hand in hand. <br>
+    <i class="fas fa-minus"></i>	Well-equipped labs. <br>
+    <i class="fas fa-minus"></i>	Practical knowledge given via field visits and educational tours. <br>
+    <i class="fas fa-minus"></i>	Students are encouraged for yoga, malkham, karate and other healthy exercises through competitions and events. <br>
+
+
 </p>
 <div class="container">
   <div style="justify-content: space-evenly; display: flex;" class="row">
@@ -176,22 +182,22 @@
     <div class="row">
       <div class="col-sm">
       <div class="review1">
-<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
-  <br> <span style="color: white; float: right;"> name</span>
+<p> I felt very nice that I got chance to express my opinion. My both wards were taking education in this institute since 2010-11. Teachers here are very co-operative in nature. They are really boosting the morals of the students time to time. I am very glad that my both the wards have taken education from this school.
+  <br> <span style="color: black; float: right;">	Sudhakar Maroti Lokhande </span>
 </p>
       </div>
       </div>
       <div class="col-sm">
         <div class="review1">
-  <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
-    <br> <span style="color: white; float: right;"> name</span>
+  <p> It is the matter of profound trust. The huge playground, Language lab, fishery lab, IT lab, KG To PG facility are some of the highlights of the school, one of the reputed institute in south Nagpur is facilitating the service of Nurturing students for generations after generation. I felt very lucky & proud being the part of this institute
+    <br> <span style="color: black; float: right;">	Shri. Vijay Sontakke </span>
   </p>
         </div>
         </div>
         <div class="col-sm">
           <div class="review1">
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, obcaecati facilis quaerat quibusdam, dolorum molestias illum deserunt, accusamus assumenda earum aut aperiam dicta delectus ex corporis consequatur quidem vero rerum!
-      <br> <span style="color: white; float: right;"> name</span>
+    <p> My daughter Pragati Chaudhary XII science (2019-2020) studyed in this college. It has good infrastructure and many facilities are provided to students. Sports and Moral values are also an important part of education. Teachers help students to acquire and grow in their knowledge. Teachers also gave online education which made us  satisfied.             
+      <br> <span style="color: black; float: right;">	Mr. Dinesh Chaudhary</span>
     </p>
           </div>
           </div>
@@ -208,7 +214,7 @@
 <section>
   
   <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
+<footer style="font-family: 'Titillium Web', sans-serif;" class="page-footer ">
 
   <div style="background-color: #031640 ;">
     <div class="container">
