--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,8 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <!-- Bootstrap core CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
@@ -23,7 +24,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color: #e9412bf5;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #031640;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,15 +135,13 @@
       </div>
       <div class="col-sm">
           <div class="mission">
-            <p class="paras">1)	To extend education to all levels of society. <br>
-              2)	To make students achieve Morality, Ethics and Values.  <br>
-              3)	To attain students’ Intellectual, Physical, Mental, Cultural and Social Development.  <br>
-              4)	To develop Modern and Scientific Perceptive among students.  <br>
-              5)	To strengthen students’ skillsets through Digitalization and E-learning.  <br>
-              6)	To make students aware about Individual Cleanliness, Health and Sustainable Environment.   <br>
-              7)	To implement Clean Environment, Clean School and Clean India mission.  <br>
-              8)	To cultivate Indian Culture, Secularism, National Integrity and National spirit to imbibe constitutional  values.  <br> 
-              </p>
+            <p class="paras">•	To extend education to all levels of society. <br>
+              •	To make students achieve Morality, Ethics and Values.  <br>
+              •	To attain students’ Intellectual, Physical, Mental, Cultural and Social Development.  <br>
+              •	To develop Modern and Scientific Perceptive among students.  <br>
+              •	To strengthen students’ skillsets through Digitalization and E-learning.  <br>
+              •	To make students aware about Individual Cleanliness, Health and Sustainable Environment.   <br>
+              •	To implement Clean Environment, Clean School and Clean India mission.  <br> </p>
         </div>
       </div>
       
@@ -151,7 +150,7 @@
 </section>
 <br>
 <br>
-<h1 class="head">Directors Message</h1>
+<h1 class="head">Our Inspirations</h1>
 <section style="background-color: rgb(221, 221, 255);">
 <div class="ds-msg">
   <div>
@@ -159,7 +158,7 @@
 </div>
 <div>
 <p class="para para2"> We are passionate to educate children to stimulate their process of thinking and discrimination with scientific temperament, enhance their love for nation and honour for women through a teacher having positive attitude to inculcate value education, innovative approach with global relevance and academic excellence. This helps in grooming the personality, character and competitive attitude of a student who can actively balance between rights and duties as a future responsible citizen of India with national values. <br> The institution is situated at a huge campus of 2 acres having various departments with state of art infrastructure, laboratories including well equiped computer Laboratory, rich library, language lab with modern teaching aids, huge play ground and amenities. 
-    <br><span style="float: right;" > saurabh srivastava </span> <br> <span style="float: right;" > principal </span></p>  </div>
+    <br><span style="float: right; font-weight: bold;" >Sanjay Shende </span> <br> <span style="float: right;font-weight: bold;" > President </span></p>  </div>
 </div>
 
 <hr>
@@ -170,7 +169,7 @@
 <p class="para para2"> Dear Students and Parents, <br>
    “Teachers must have three loves: love of learning, love of learners and love of bringing first two loves together”. Scott Hayden. <br> 
   Vidarbha Buniyadi High school and Jr. College’s mission is to provide such an education, considering the fact that each student is different, as a person and as a learner. We believe that effective learning and teaching can be built under a shared spirit of respect among Management, Teachers, Students and Parents. Our curriculum and practices are constantly reviewed to confirm that we are following the most updated technologies, best practices, meeting all regulations, and addressing the future needs of our students. 
-  !   <br><span style="float: right;" > saurabh srivastava </span> <br> <span style="float: right;" > principal </span></p>  </div>
+  !   <br><span style="float: right; font-weight: bold;" >Mrs. Seema Ravindra Deshpande  </span> <br> <span style="float: right; font-weight: bold; " > Principal </span></p>  </div>
 <div>
   <img class="ds-img" src="./img/principl.jpg"  >
 </div>
@@ -245,7 +244,7 @@
   <!-- Footer -->
 <footer class="page-footer  font-small">
 
-  <div style="background-color: #e9412bf5 ;">
+  <div style="background-color: #031640 ;">
     <div class="container">
 
       <!-- Grid row-->
