--- a/Acadmics.html
+++ b/Acadmics.html
@@ -93,7 +93,7 @@
   <div  class="facbreadcrum" >
   <img class="im"   class="facbread"  src="./img/acad.png" alt="" width="100%" >
   <div class="midle">
-    <p> Acadmics <br>
+    <p> Academics <br>
       </p>
   </div>
 </div>
@@ -101,7 +101,7 @@
 <br>
 <br>
 <section>
-  <h1 class="head">Acadmics</h1>
+  <h1 class="head">Academics</h1>
   <br>
   <div class="container">
     <div class="row ">
@@ -169,7 +169,7 @@
     <h4 class="card-title head ">Middle School </h4>
     <hr>
     <!-- Text -->
-    <p class="card-text para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque vel, soluta numquam, aliquam, recusandae ea possimus dolores iste ipsam eaque reprehenderit omnis. Sed iusto explicabo quo sit voluptatum, repellat asperiores.</p>
+    <p class="card-text para">Nurturing and forming the base of innocent students promoted from primary school and making them ready for senior years is what we do! We believe that “Education is the passport to the future, for tomorrow belongs to those who prepare for it today.”</p>
 
   </div>
 
@@ -289,7 +289,8 @@
   <div   class="faccard">
     <div>
       <h2 style="color: #e93219;font-weight: bolder;    font-family: 'Volkhov', serif;  " > Library  </h2>
-      <p class="para" style="padding: 15px;">To create interest among students, to maintain their hobbies and develop their all-round personality we have a collection of about 10,000 books on literature, science, commerce, technology, philosophy, biographies, history, politics, etc. Our library also includes newspapers, magazines, research papers and novels. Reading room is also allotted in our huge library premises.</p>
+      <p class="para" style="padding: 15px;">To create interest among students, to maintain their hobbies and develop their all-round personality we have a collection of about 10,000 books on literature, science, commerce, technology, philosophy, biographies, history, politics, etc. Our library also includes newspapers, magazines, research papers and novels. Reading room is also allotted in our huge library premises. <br>
+      <a href=""> Know More</a> </p>
     </div>
     <div>
       <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
@@ -298,7 +299,7 @@
   <div   class="faccard">
     <div>
       <h2 style="color: #e93219;font-weight: bolder;    font-family: 'Volkhov', serif;  " > Labs  </h2>
-      <p class="para" style="padding: 15px;">We at Vidarbha Buniyadi provide a range of eight practical labs to our students keeping in mind the quality of equipments and safety measures taken during special practicals. Spacious, highly updated and well furnished lab environment is provided with independent floor allotted to each lab. </p>
+      <p class="para" style="padding: 15px;">We at Vidarbha Buniyadi provide a range of eight practical labs to our students keeping in mind the quality of equipments and safety measures taken during special practicals. Spacious, highly updated and well furnished lab environment is provided with independent floor allotted to each lab. <br>  <a href=""> Know More</a> </p>
     </div>
     <div>
       <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
