--- a/Faculty.html
+++ b/Faculty.html
@@ -10,7 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
@@ -104,7 +106,7 @@
 <br>
 
 <h1 class="head1" > Our Team</h1>
-<p style="margin: 15px; text-align: center; font-size: 15px;     font-family: 'Roboto Condensed', sans-serif;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem eum minus blanditiis. Laudantium, libero accusantium! Quibusdam rem nesciunt nemo tem</p>
+<p style="margin: 15px; text-align: center; font-size: 15px;      font-family: 'Titillium Web', sans-serif;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem eum minus blanditiis. Laudantium, libero accusantium! Quibusdam rem nesciunt nemo tem</p>
 <br>
 <div >
     <div class="naming" > 
@@ -113,11 +115,11 @@
 
     <br>
     <div class="lines">
-    <p class="inner"> <a style="color: black " href="#primary ">  Primary School</a>  </p>
+    <p class="inner"> <a style="color: black " href="#primary "> <i class="fas fa-caret-right"></i>  Primary School</a>  </p>
 
-    <p class="inner"> <a style="color: black " href="#middle">Middle School</a>  </p>
+    <p class="inner"> <a style="color: black " href="#middle"> <i class="fas fa-caret-right"></i> Middle School</a>  </p>
 
-    <p class="inner"> <a style="color: black " href="#High">  High School</a>  </p>
+    <p class="inner"> <a style="color: black " href="#High"><i class="fas fa-caret-right"></i>  High School</a>  </p>
 </div>
 </div>
 </div>
