--- Auto-Git Commit ---

--- a/Gallery.html
+++ b/Gallery.html
@@ -10,14 +10,16 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/gallerycss.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+
  
 </head>
 <body >
@@ -98,9 +100,9 @@
     </div>
   </div>
 </section>
-<br>
-<br>
-<section>
+
+
+<section style="background-color: rgba(195, 248, 142, 0.671);">
 <div class="album-row">
 
     <div class="card">
@@ -239,7 +241,7 @@
  
 <section>
   <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
+<footer class="page-footer  font-small ">
 
   <div style="background-color: #031640 ;">
     <div class="container">
