--- a/ip.html
+++ b/ip.html
@@ -16,7 +16,7 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="./stugal.css">
+  <link rel="stylesheet" href="./css/stugal.css">
   <script>
     // MDB Lightbox Init
 $(function () {
