--- a/Admission.html
+++ b/Admission.html
@@ -10,7 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
@@ -23,7 +25,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color: #e9412bf1;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #031640;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -103,9 +105,9 @@
 <section class="my-5">
 
   <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold text-center my-5">Online Admission Registration Guidelines</h2>
+  <h2 class="h1-responsive font-weight-bold text-center my-5 head ">Online Admission Registration Guidelines</h2>
   <!-- Section description -->
-  <p class="lead grey-text text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur
+  <p class="lead grey-text text-center w-responsive mx-auto mb-5 admsn-para">Lorem ipsum dolor sit amet, consectetur
     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
     veniam.</p>
 
@@ -185,7 +187,7 @@
   <!-- Footer -->
 <footer class="page-footer  font-small ">
 
-  <div style="background-color: #e9412bf1 ;">
+  <div style="background-color: #031640 ;">
     <div class="container">
 
       <!-- Grid row-->
