--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -242,7 +242,7 @@
 </section>
 <section>
   <!-- Footer -->
-<footer class="page-footer  font-small">
+<footer style="  font-family: 'Titillium Web', sans-serif;" class="page-footer  font-small">
 
   <div style="background-color: #031640 ;">
     <div class="container">
