--- a/Faculty.html
+++ b/Faculty.html
@@ -817,7 +817,7 @@
 
 <section>
   <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
+<footer style="  font-family: 'Titillium Web', sans-serif;" class="page-footer  font-small blue-grey lighten-5">
 
   <div style="background-color: #031640 ;">
     <div class="container">
