--- a/stud.html
+++ b/stud.html
@@ -16,7 +16,7 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="./stugal.css">
+  <link rel="stylesheet" href="./css/stugal.css">
   <script>
     // MDB Lightbox Init
 $(function () {
@@ -66,10 +66,10 @@ $("#mdb-lightbox-ui").load("mdb-addons/mdb-lightbox-ui.html");
       <li class="nav-item">
         <a class="nav-link" href="Faculty.html">Our Team</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="Admission.html">Admission</a>
       </li>
-      <li class="nav-item  ">
+      <li class="nav-item active  ">
         <a class="nav-link" href="Gallery.html"> Gallery</a>
       </li>
       <li class="nav-item">
@@ -117,21 +117,21 @@ $("#mdb-lightbox-ui").load("mdb-addons/mdb-lightbox-ui.html");
     <div  class="col-md-4">
           <figure>
             <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(145).jpg" data-size="1600x1067">
-            <img alt="picture" src="./img/person_4.jpg" class="img-fluid">
+            <img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid">
           </a>
           </figure>
         </div>
         <div  class="col-md-4">
           <figure>
             <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(149).jpg" data-size="1600x1067">
-              <img alt="picture" src="./img/person_200.png" class="img-fluid">
+              <img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid">
             </a>
           </figure>
         </div>
         <div  class="col-md-4">
           <figure>
             <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(149).jpg" data-size="1600x1067">
-              <img alt="picture" src="./img/person_2.jpg" class="img-fluid">
+              <img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid">
             </a>
           </figure>
         </div>
