--- a/ContactUS.html
+++ b/ContactUS.html
@@ -10,7 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
@@ -142,9 +144,9 @@ padding-bottom: 20px;">
   <!-- Footer -->
   <section>
     <!-- Footer -->
-  <footer class="page-footer  font-small blue-grey lighten-5">
+  <footer style="  font-family: 'Titillium Web', sans-serif;" class="page-footer  font-small ">
   
-    <div style="background-color: #031640 ;">
+    <div  style="background-color: #031640 ;">
       <div class="container">
   
         <!-- Grid row-->
