--- a/social.html
+++ b/social.html
@@ -16,7 +16,7 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="./stugal.css">
+  <link rel="stylesheet" href="./css/stugal.css">
   <script>
     // MDB Lightbox Init
 $(function () {
@@ -66,10 +66,10 @@ $("#mdb-lightbox-ui").load("mdb-addons/mdb-lightbox-ui.html");
       <li class="nav-item">
         <a class="nav-link" href="Faculty.html">Our Team</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="Admission.html">Admission</a>
       </li>
-      <li class="nav-item  ">
+      <li class="nav-item active  ">
         <a class="nav-link" href="Gallery.html"> Gallery</a>
       </li>
       <li class="nav-item">
